# words-to-numbers

./: LICENSE  README.md  pyproject.toml
tests/: V1.py  V2.py  V3.py  V4.py  tempCodeRunnerFile.py
words_to_numbers/: __main__.py  tempCodeRunnerFile.py
